# sudo

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: security.yml
skill/: SKILL.md  skill.json
src/: audit.rs  cli.rs  error.rs  exec.rs  main.rs  trust.rs
