[package]
name = "openape-sudo"
version = "0.1.0"
edition = "2021"
description = "Privilege elevation via OpenApe grant system"
license = "UNLICENSED"

[[bin]]
name = "apes"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = "9"
nix = { version = "0.29", features = ["user", "process", "signal"] }
thiserror = "2"
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
